--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -171,6 +171,15 @@ From {{inh|fr|fro|dame}}, from {{inh|fr|LL.|domna}}, shortened variant of {{inh|
 
 ----
 
+==Northern Sami==
+
+===Noun===
+{{head|se|noun form}}
+
+# {{inflection of|dapmi||gen|s|lang=se}}
+
+----
+
 ==Norwegian Bokmål==
 
 ===Etymology===
@@ -229,8 +238,8 @@ From {{inh|fro|LL.|domna}}, shortened variant of {{inh|fro|la|domina}}.
 * Unlike in modern French, ''[[fame#Old French|fame]]'' usually refers to a {{l|en|wife}}, while ''dame'' refers to a {{l|en|woman}}.
 
 ====Descendants====
-* English: {{l|en|dame}}
-* French: {{l|fr|dame}}
+* {{desc|en|dame}}
+* {{desc|fr|dame}}
 
 [[Category:fro:People]]
 
