--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -5,9 +5,9 @@
 From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from {{etyl|fro|en}} {{m|fro|plege}} (Modern {{cog|fr|pleige}}) from {{etyl|ML.|en}} {{m|la|plevium}}, {{m|la|plebium}}, from {{etyl|ML.|en}} {{m|la|plebiō||I pledge}}, from {{etyl|frk|en}} {{m|frk|*plegan||to pledge; to support; to guarantee}}, from Proto-Germanic {{m|gem-pro|*plehaną||to care about, be concerned with}}. Akin to {{cog|goh|pflegan||to take care of, be accustomed to}}, {{cog|osx|plegan||to vouch for}}, {{cog|ang|plēon||to risk, endanger}}. More at {{l|en|plight}}.
 
 ===Pronunciation===
-* {{IPA|/pledʒ/|lang=en}}
+* {{IPA|/plɛdʒ/|lang=en}}
 * {{audio|en-us-pledge.ogg|Audio (US)|lang=en}}
-* {{rhymes|edʒ|lang=en}}
+* {{rhymes|ɛdʒ|lang=en}}
 <!-- 1 syllable words !-->
 
 ===Verb===
