--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -20,8 +20,10 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 |passage=The dirty secret of the internet is that all this distraction and interruption is immensely profitable. Web companies like to boast about&nbsp;[&hellip;], or offering services that let you&nbsp;[&hellip;], "share the '''things''' you love with the world" and so on. But the real way to build a successful online business is to be better than your rivals at undermining people's control of their own attention.}}
 # A [[word]], [[symbol]], [[sign]], or other [[referent]] that can be used to refer to any entity.
 # An individual object or distinct entity.
-# {{lb|en|informal}} Something that is normal or generally recognised.
+# {{lb|en|informal}} Something that is existent or generally recognised.
 #: {{ux|en|Bacon pie? Is that a '''thing'''?}}
+#* '''2014''', Marianna Papastephanou, ‎Torill Strand, ‎Anne Pirrie, ''Philosophy as a Lived Experience''
+#*: Frequent statements of the kind “'Race' is not a '''thing'''”, “'races,' put simply, do not exist”, “'race' (as each essay subtly shows) simply does not exist” aim to discredit Todorov's claim that a relapse to an ontology of race is at place {{...}}
 # {{lb|en|legal}}
 ## Whatever can be [[own]]ed.
 ## [[corporeal|Corporeal]] [[object]].
