--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -170,7 +170,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|njewjericka|f}}
 *: Upper Sorbian: {{t+|hsb|wjewjerčka|f}}
-* Southern Altai: {{t|alt|тийиҥ}}
+* Southern Altai: {{t|alt|тийиҥ|tr=tiyiń}}
 * Southern Sami: {{t|sma|åeruve}}
 * Spanish: {{t+|es|ardilla|f}}
 * Sranan Tongo: {{t|srn|ekosi}}
