/* English */ <New Wave#47816633>

--- a/en/n/New Wave.801859.wikitext
+++ b/en/n/New Wave.801859.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{calque|en|new|wave|etyl term=Nouvelle Vague|etyl lang=fr}}
+{{calque|en|fr|Nouvelle Vague}}
 
 ===Noun===
 {{en-noun|head=[[new|New]] [[wave|Wave]]|-}}
