t+vi:[[phép trừ]] t-balance ([[WT:EDIT|Assisted]]) <subtraction#47819323>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -41,8 +41,8 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis|notext=1}}.
 * Greek: {{t+|el|αφαίρεση|f}}
 * Hungarian: {{t+|hu|kivonás}}
 * Ido: {{t+|io|sustraciono}}
-{{trans-mid}}
 * Italian: {{t+|it|sottrazione|f}}
+{{trans-mid}}
 * Japanese: {{t|ja|引き算|tr=ひきざん, hikizan|sc=Jpan}}, {{t|ja|減法|tr=げんぽう, genpō|sc=Jpan}}
 * Norwegian:
 *: Bokmål: {{t|nb|subtraksjon|m}}
@@ -59,6 +59,7 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis|notext=1}}.
 * Telugu: {{t+|te|తీసివేత|tr=teesiveata|sc=Telu}}
 * Turkish: {{t+|tr|çıkarma}}, {{t|tr|çıkarma işlemi}}
 * Ukrainian: {{t|uk|відніма́ння}}
+* Vietnamese: {{t+|vi|phép trừ}}
 {{trans-bottom}}
 
 {{trans-top|calculation}}
