t+eo:[[afero]] ([[WT:EDIT|Assisted]]) <thing#47840760>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -128,7 +128,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Czech: {{t+|cs|věc|f}}
 * Danish: {{t+|da|ting|c}}
 * Dutch: {{t+|nl|ding|n}}
-* Esperanto: {{t|eo|aĵo}}
+* Esperanto: {{t|eo|aĵo}}, {{t|eo|afero}}
 * Estonian: {{t+|et|asi}}, {{t|et|ese}}
 * Extremaduran: {{t|ext|cosa}}
 * Finnish: {{t+|fi|asia}}, {{t+|fi|esine}}
