Replacing Wikisaurus with Thesaurus. <quack#47872019>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -110,7 +110,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise
 =====Synonyms=====
 * {{l|en|medicaster}} {{qualifier|dated|now chiefly literary}}
 * {{l|en|quacksalver}}
-* ''See also'' [[Wikisaurus:deceiver]]
+* ''See also'' [[Thesaurus:deceiver]]
 
 =====Derived terms=====
 * {{l|en|quackery}}
