--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -2,6 +2,7 @@
 ==English==
 {{wikipedia|lang=en}}
 [[Image:Island_near_Fiji.jpg|thumb|right|An island.]]
+[[File:Rainspell Skyline.jpg|thumb|right|An island with skyscrapers.]]
 
 ===Alternative forms===
 * {{l|en|iland}} {{qualifier|obsolete}}
