Replacing Wikisaurus with Thesaurus. <thing#47875422>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -64,8 +64,8 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 
 ====Synonyms====
 * {{sense|referent that can be used to refer to any entity}} {{l|en|item}}, {{l|en|stuff}} (''[[uncountable]] equivalent''), {{l|en|yoke}} (''Ireland'')
-* {{sense|penis}} see [[Wikisaurus:penis]]
-* {{sense|personal preference}} see [[Wikisaurus:predilection]]
+* {{sense|penis}} see [[Thesaurus:penis]]
+* {{sense|personal preference}} see [[Thesaurus:predilection]]
 
 ====Derived terms====
 {{der3|lang=en|title=Terms derived from ''thing''
