--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -164,7 +164,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 # {{lb|en|British|informal}} To [[pass gas]]; to [[fart]].
 
 =====Synonyms=====
-* {{sense|to fart}} {{l|en|Wikisaurus:flatulate}}
+* {{sense|to fart}} {{l|en|Thesaurus:flatulate}}
 
 =====Derived terms=====
 * {{l|en|badgerer}}
