Replacing Wikisaurus with Thesaurus. <cop#47876218>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -64,7 +64,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 # {{lb|en|slang|law enforcement}} A [[police officer]] or [[prison guard]].
 
 =====Synonyms=====
-* See also [[Wikisaurus:police officer]]
+* See also [[Thesaurus:police officer]]
 
 =====Derived terms=====
 * [[cop shop]]
