Replacing Wikisaurus with Thesaurus. <dame#47876227>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -24,7 +24,7 @@ From {{inh|en|enm|dame}}, {{m|enm|dam}}, from {{der|en|fro|dame}}, from {{der|en
 # {{lb|en|UK}} A [[matron]] at {{w|Eton College}}.
 
 ====Synonyms====
-* See also [[Wikisaurus:woman]]
+* See also [[Thesaurus:woman]]
 
 ====Related terms====
 * {{l|en|grande dame}}
