Replacing Wikisaurus with Thesaurus. <crook#47876388>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -40,7 +40,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 # {{lb|en|music}} A small tube, usually curved, applied to a trumpet, horn, etc., to change its pitch or key.
 
 =====Synonyms=====
-* {{sense|criminal}} See [[Wikisaurus:criminal]]
+* {{sense|criminal}} See [[Thesaurus:criminal]]
 
 =====Derived terms=====
 * {{l|en|by hook or by crook}}
