--- a/en/t/Tyneside.773762.wikitext
+++ b/en/t/Tyneside.773762.wikitext
@@ -4,6 +4,10 @@
 ===Etymology===
 {{compound|en|Tyne|side}}
 
+===Pronunciation===
+* {{a|RP|GA}} {{IPA|/ˈtaɪnsaɪd/|lang=en}}
+* {{a|Geordie}} {{IPA|/ˈtainsaid/|[ˈtɛinsɛid]|lang=en}}
+
 ===Proper noun===
 {{en-proper noun}}
 
