--- a/en/t/Tyneside.773762.wikitext
+++ b/en/t/Tyneside.773762.wikitext
@@ -6,7 +6,7 @@
 
 ===Pronunciation===
 * {{a|RP|GA}} {{IPA|/ˈtaɪnsaɪd/|lang=en}}
-* {{a|Geordie}} {{IPA|/ˈtainsaid/|[ˈtɛinsɛid]|lang=en}}
+* {{a|Geordie}} {{IPA|/ˈtainsaid/|[ˈtainsaid]|[ˈtɛinsɛid]|lang=en}}
 
 ===Proper noun===
 {{en-proper noun}}
