--- a/en/d/DVD-RW.26218.wikitext
+++ b/en/d/DVD-RW.26218.wikitext
@@ -3,8 +3,7 @@
 ===Pronunciation===
 * {{a|RP}} {{IPA|/diː viː diː ɑː ˈdʌb(ə)ljuː/|lang=en}}
 
-===Initialism===
-{{rfc-header|Initialism}}
-{{head|en|initialism}}
+===Noun===
+{{en-noun}}
 
-# {{w|Digital Versatile Disc}} - [[read]]/[[writable]]. A form of digital media that is similar to a CD, but has far greater capacity and can be written to more than once.
+# {{initialism of|{{w|Digital Versatile Disc}} - [[read]]/[[writable]]|lang=en|dot=}}: a form of digital media that is similar to a CD, but has far greater capacity and can be written to more than once.
