--- a/en/f/fingerpost.720314.wikitext
+++ b/en/f/fingerpost.720314.wikitext
@@ -12,6 +12,8 @@
 
 # A [[board]] that shows the direction (and often distance) to a named place; especially one of several attached to a [[milepost]]
 # The milepost itself.
+# Melville, Herman. The Confidence Man. Chapter 15.
+#* some hint, which, besides confirming him in the theory of virtue, may, likewise, serve for a '''finger-post''' to virtuous action.
 
 ===See also===
 * {{l|en|guidepost}}
