--- a/en/f/fingerpost.720314.wikitext
+++ b/en/f/fingerpost.720314.wikitext
@@ -12,7 +12,7 @@
 
 # A [[board]] that shows the direction (and often distance) to a named place; especially one of several attached to a [[milepost]]
 # The milepost itself.
-#* '''1857''', Herman Melville, ''The Confidence Man'',  Dix, Edwards & Co., 1857. Chapter 15.
+#* '''1857''', Herman Melville, ''The Confidence Man'',  Dix, Edwards & Co., 1857. Page 108.
 #*: some hint, which, besides confirming him in the theory of virtue, may, likewise, serve for a '''finger-post''' to virtuous action.
 
 ===See also===
