--- a/en/w/wah lau.720445.wikitext
+++ b/en/w/wah lau.720445.wikitext
@@ -1,5 +1,4 @@
 {{also|wahlau}}
-
 ==English==
 
 ===Alternative forms===
@@ -11,7 +10,7 @@
 From {{etyl|nan-teo|en}} and {{etyl|nan-hok|en}}. Ultimate origin uncertain: first element equivalent to {{etyl|nan-hok|en}} {{zh-l|[[我]]|tr=góa|my}} + ''lau'', possibly from {{zh-l|[[老爸]]|tr=lāu-pē|father}}. Originating in the 1990s.
 
 ===Interjection===
-{{en-interj}}
+{{en-interj|head=wah lau}}
 
 # {{lb|en|Singapore|informal}} [[oh no|Oh no]]!
 
