--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|beholden}}, from {{etyl|ang|en}} {{m|ang|behealdan||to hold, have, occupy, possess, guard, preserve, contain, belong, keep, observe, consider, behold, look at, gaze on, see, signify, avail, effect, take care, beware, be cautious, restrain, act, behave}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bihaldaną||to hold with, keep}}, equivalent to {{prefix|be|hold|lang=en}}. Cognate with {{cog|nl|behouden||to keep, restrain, preserve}}, {{cog|de|behalten||to keep, restrain, remember}}, {{etyl|da|-}} and {{cog|no|beholde||to keep}} and {{cog|sv|behålla||to keep}}.
+From {{der|en|enm|beholden}}, from {{der|en|ang|behealdan||to hold, have, occupy, possess, guard, preserve, contain, belong, keep, observe, consider, behold, look at, gaze on, see, signify, avail, effect, take care, beware, be cautious, restrain, act, behave}}, from {{der|en|gem-pro|*bihaldaną||to hold with, keep}}, equivalent to {{prefix|be|hold|lang=en}}. Cognate with {{cog|nl|behouden||to keep, restrain, preserve}}, {{cog|de|behalten||to keep, restrain, remember}}, {{etyl|da|-}} and {{cog|no|beholde||to keep}} and {{cog|sv|behålla||to keep}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/bɪˈhəʊld/|lang=en}}
