--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -441,6 +441,18 @@ From {{inh|gmq-osw|non|rót}}, from {{inh|gmq-osw|gem-pro|*wrōts}}.
 
 ----
 
+==Pennsylvania German==
+
+===Etymology===
+From {{inh|pdc|goh|rōt}}, from {{inh|pdc|gem-pro|*raudaz}}. Compare {{cog|de|rot}}, {{cog|nl|rood}}, {{cog|en|red}}.
+
+===Adjective===
+{{head|pdc|adjective}}
+
+# [[red]]
+
+----
+
 ==Swedish==
 
 ===Etymology===
