--- a/en/e/extratropical.742299.wikitext
+++ b/en/e/extratropical.742299.wikitext
@@ -22,3 +22,10 @@
 *: Nynorsk: {{t|nn|ekstratropisk}}
 {{trans-mid}}
 {{trans-bottom}}
+----
+==Spanish==
+
+===Adjective===
+{{es-adj|pl=extratropicales}}
+
+# {{l|en|extratropical}}
