--- a/en/l/lentor.801178.wikitext
+++ b/en/l/lentor.801178.wikitext
@@ -7,11 +7,11 @@
 {{en-noun|-|s}}
 
 # [[slowness]], [[sluggishness]]
-#* '''1955''', Vladimir Nabokov, ''Lolita''
-#*: {{...}} she walked through dilating space with the '''lentor''' of one walking under water {{...}}
 # {{lb|en|obsolete|physics}} [[viscosity]]
 #* '''1744''', George Berkeley, ''Siris''
-#*: There is a lentor or smoothness in the blood of healthy strong people {{...}}
+#*: There is a '''lentor''' or smoothness in the blood of healthy strong people {{...}}
+#* '''1955''', Vladimir Nabokov, ''Lolita''
+#*: {{...}} she walked through dilating space with the '''lentor''' of one walking under water {{...}}
 
 ----
 
