--- a/en/n/NHNF.803005.wikitext
+++ b/en/n/NHNF.803005.wikitext
@@ -3,6 +3,6 @@
 ===Phrase===
 {{en-phrase}}
 
-# {{lb|en|Internet}} [[no harm, no foul]]
+# {{lb|en|Internet slang}} {{initialism of|no harm, no foul|lang=en}}
 
 [[Category:English initialisms]]
