--- a/en/i/indirection.742105.wikitext
+++ b/en/i/indirection.742105.wikitext
@@ -5,8 +5,8 @@
 
 ===Noun===
 {{wikipedia}}
-{{en-noun}}
+{{en-noun|~}}
 
-# A lack of [[direction]]; [[deviousness]] or [[aimlessness]]
-# {{lb|en|programming}} Use of a [[variable]] or [[object]] through its [[address]]
+# A lack of [[direction]]; [[deviousness]] or [[aimlessness]].
+# {{lb|en|programming}} Use of a [[variable]] or [[object]] through its [[address]].
 # An indirect action or process.
