--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -35,7 +35,7 @@
 ==Old English==
 
 ===Etymology===
-From {{prefix|be|gān|lang=ang}}.
+From {{prefix|be|gān|lang=ang}}. Cognate with {{cog|goh|bigān}}.
 
 ===Pronunciation===
 * {{IPA|/beˈɡɑːn/|lang=ang}}
