--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -419,8 +419,12 @@ From {{inh|goh|gem-pro|*raudaz}} (compare {{cog|osx|rōd}}, {{cog|ang|rēad}}, {
 # [[red]]
 
 ====Descendants====
-* German: {{l|de|rot}}
-* Yiddish: {{l|yi|רויט}}
+* {{desc|gmh|rōt}}
+** {{desc|de|rot}}
+*** {{desc|pdc|rot}}
+** {{desc|lb|rout}}
+** {{desc|wym|rūt}}
+** {{desc|yi|רויט}}
 
 [[Category:goh:Colors]]
 
