--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -12,6 +12,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/|lang=en}}, rarely {{IPAchar|/ədˈvɝtɪzmənt/|lang=en}}
 * {{audio|en-us-advertisement.ogg|Audio (US)|lang=en}}
 * {{a|NZ}} {{IPA|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/|lang=en}}
+* {{a|Singapore}} {{IPA|/ˌædvəˈtɪzmənt/|lang=en}}
 * {{hyphenation|ad|ver|tise|ment|lang=en}}
 
 ===Noun===
