t+tr:[[dörtgen]] ([[WT:EDIT|Assisted]]) <quadrilateral#47971471>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -57,6 +57,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Swedish: {{t+|sv|fyrhörning|c}}
 * Tagalog: {{t|tl|patsiha}}, {{t|tl|patgilid}}
 * Telugu: {{t+|te|చతుర్భుజి}}
+* Turkish: {{t+|tr|dörtgen}}
 * Zazaki: {{t|zza|çehardag}}, {{t|zza|çardag}}
 {{trans-bottom}}
 
