--- a/en/p/pizzica.801257.wikitext
+++ b/en/p/pizzica.801257.wikitext
@@ -1,10 +1,10 @@
 ==English==
 
 ===Etymology===
-From {{etyl|it|en}} {{m|it|pizzica}}
+{{bor|en|it|pizzica}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|?}}
 
 # {{lb|en|music}} A popular traditional [[dance]] of [[Italy]], originating on the [[Salento]] peninsula
 #* {{quote-journal|2007|January 19|The New York Times|Pop and Rock Listings|New York Times|url=http://www.nytimes.com/2007/01/19/arts/music/19pop.html
