--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -25,6 +25,7 @@
 * Japanese: {{t+|ja|親友|tr=しんゆう, shin'yū|sc=Jpan}}, {{t|ja|親しい友達|tr=したしいともだち, shitashii tomodachi|sc=Jpan}}, {{t|ja|心安い友人|tr=こころやすいゆうじん, kokoroyasui yūjin|sc=Jpan}}
 * Kannada: {{t+|kn|ಆಪ್ತಮಿತ್ರ}}, {{t+|kn|ಪ್ರಾಣಸ್ನೇಹಿತ}}
 * Polish: {{t|pl|przyjaciel od serca|m}}, {{t|pl|przyjaciółka od serca|f}}
+* Portuguese: {{t-needed|pt}}
 * Romanian: {{t+|ro|fârtat|m}}
 * Russian: {{t+|ru|закады́чный друг|m}}, {{t|ru|бли́зкий друг|m}}
 * Scottish Gaelic: {{t|gd|goistidh|m}} {{qualifier|male}}, {{t|gd|bana-ghoistidh|m}} {{qualifier|female}}
