--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -137,7 +137,7 @@ From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 ==French==
 
 ===Pronunciation===
-* {{IPA|/mi.ni.mɔm/|lang=fr}}
+* {{fr-IPA}}
 * {{audio|Fr-minimum.ogg|Audio|lang=fr}}
 * {{rhymes|ɔm|lang=fr}}
 * {{homophones|minimums|lang=fr}}
