--- a/en/o/overstrain.856243.wikitext
+++ b/en/o/overstrain.856243.wikitext
@@ -6,7 +6,7 @@ From {{prefix|en|over|strain}}.
 ===Verb===
 {{en-verb}}
 
-# To subject to an [[excessive]] [[demand]] on [[strength]], [[resource]]s, or [[abilities]]
+# {{lb|en|ambitransitive}} To subject to an [[excessive]] [[demand]] on [[strength]], [[resource]]s, or [[abilities]]
 #* {{RQ:Orwell Animal Farm|6}}
 #*: Clover warned him sometimes to be careful not to '''overstrain''' himself, but Boxer would never listen to her.
 
@@ -16,6 +16,11 @@ From {{prefix|en|over|strain}}.
 {{trans-mid}}
 * Swedish: {{t+|sv|överanstränga}}
 {{trans-bottom}}
+
+===Noun===
+{{en-noun|?}}
+
+# [[excessive]] [[strain]]
 
 ===Anagrams===
 * {{anagrams|en|overtrains}}
