--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -73,7 +73,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 ====Translations====
 {{trans-top}}
 * French: {{t|fr|voici}}, {{t+|fr|voilà}}
-* Hmong: {{t|mww|saib seb}}
+* White Hmong: {{t|mww|saib seb}}
 * Italian: {{t|it|ecco}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|ئەوەتا|tr=eweta}}, {{t|ckb|ئەمەتا|tr=emeta}}
