t+ar:[[آنذاك]] t+ar:[[حينئذ]] ([[WT:EDIT|Assisted]]) <then#48007042>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -60,6 +60,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 ====Translations====
 {{trans-top|at that time}}
 * Albanian: {{t+|sq|atëherë}}
+* Arabic: {{t|ar|آنَذَاكَ}}, {{t|ar|حِينَئِذٍ}}
 * Aromanian: {{t|rup|atumtsea}}, {{t|rup|atuntsi}}
 * Belarusian: {{t|be|тады|tr=tadý|sc=Cyrl}}
 * Bengali: {{t+|bn|তখন|tr=tôkhôn|sc=Beng}}
