--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -175,6 +175,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 ==French==
 
 ===Pronunciation===
+* {{fr-IPA}}
 * {{audio|Fr-fraction.ogg|Audio|lang=fr}}
 
 ===Noun===
