--- a/en/r/reanimation.741524.wikitext
+++ b/en/r/reanimation.741524.wikitext
@@ -1,12 +1,14 @@
 {{also|Reanimation|réanimation}}
-
 ==English==
 
 ===Pronunciation===
 * {{rhymes|eɪʃən|lang=en}}
 
+===Etymology===
+{{prefix|en|re|animation}}
+
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # The act of [[reanimate|reanimating]]; a second or subsequent [[animation]].
 
