usenotes not lexical but encyclopaedic <sawm#48017071>

--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -5,15 +5,12 @@
 * {{l|en|saum}}
 
 ===Etymology===
-From {{etyl|ar|en}} {{m|ar|صَوْم||fasting; abstaining from food, drink, and sex}}, probably borrowed from {{etyl|syc|en}} {{m|syc|ܨܘܡܐ|tr=ṣawmāʾ}}.
+From {{der|en|ar|صَوْم||fasting; abstaining from food, drink, and sex}}, probably borrowed from {{etyl|syc|en}} {{m|syc|ܨܘܡܐ|tr=ṣawmāʾ}}.
 
 ===Noun===
-{{en-noun|?}}
+{{en-noun|-}}
 
 # {{lb|en|Islam}} [[fasting]], [[abstention]], [[abstinence]]; the third of the [[five pillars]] of [[Islam]]
-
-====Usage notes====
-* During the month of [[Ramadan]], Muslims are called to abstain from food, drink, sex, and other sensuous pleasures from sunrise to sunset. Islamic [[jurisprudence]] prescribes fasting also for certain other dates (depending on the school or sect) and as a form of obligatory penitence for specified sins.
 
 ====Translations====
 {{trans-top|Islamic fasting}}
