Undo revision 48031557 by [[Special:Contributions/2601:2C7:4380:46A5:EC81:B1A0:3379:A760|2601:2C7:4380:46A5:EC81:B1A0:3379:A760]] ([[User talk:2601:2C7:4380:46A5:EC81:B1A0:3379:A760|talk]]) <pateet#48031726>

--- a/en/p/pateet.801469.wikitext
+++ b/en/p/pateet.801469.wikitext
@@ -8,14 +8,7 @@
 
 ====Related terms====
 * {{l|af|patetiek}}
-* {{l|af|pateties}}theaxelplays.aternos.me
-theaxelplays.aternos.me
-theaxelplays.aternos.me
-theaxelplays.aternos.me
-theaxelplays.aternos.me
-theaxelplays.aternos.me
-theaxelplays.aternos.me
-
+* {{l|af|pateties}}
 
 ----
 
