--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -101,7 +101,9 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Mongolian: {{t+|mn|дорго}}
 * Navajo: {{t|nv|nahashchʼidí}}
 * Norman: {{t|nrf|blaireau|m}} {{qualifier|Jersey}}
-* Norwegian: {{t+|no|grevling|m}}
+* Norwegian:
+*: Bokmål: {{t+|nb|grevling|m}}
+*: Nynorsk: {{t|nn|grevling|m}}
 * Occitan: {{t+|oc|tais|m}}, {{t+|oc|rabàs|m}}
 * Old English: {{t|ang|brocc|m}}
 * Old Irish: {{t|sga|brocc|m}}
