--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -145,8 +145,9 @@ From {{der|zh|en|CD}}.
 {{wikipedia|lang=fr}}
 
 ===Pronunciation===
-* {{IPA|/se.de/|lang=fr}}
+* {{fr-IPA|cédé}}
 * {{audio|Fr-CD.ogg|CD|lang=fr}}
+* {{homophones|lang=fr|céder
 
 ===Noun===
 {{fr-noun|m|CD}}
