--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -147,7 +147,7 @@ From {{der|zh|en|CD}}.
 ===Pronunciation===
 * {{fr-IPA|cédé}}
 * {{audio|Fr-CD.ogg|CD|lang=fr}}
-* {{homophones|lang=fr|céder
+* {{homophones|lang=fr|céder}}
 
 ===Noun===
 {{fr-noun|m|CD}}
