--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -93,6 +93,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Portuguese: {{t+|pt|arriscar}}
 * Russian: {{t+|ru|рискова́ть}}
 * Serbo-Croatian: {{t+|sh|kockati|alt=kȍckati se}}
+* Thai: {{t+|th|พนัน}}
 * Turkish: {{t-needed|tr}}
 * Walloon: fé ene {{t+|wa|wadjeure}}
 {{trans-bottom}}
@@ -120,6 +121,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Russian: {{t|ru|игра́ть в аза́ртные и́гры}}
 * Serbo-Croatian: {{t+|sh|kockati|alt=kȍckati se}}
 * Spanish: {{t+|es|apostar}}, {{t+|es|jugar}}
+* Thai: {{t+|th|พนัน}}
 * Walloon: {{t+|wa|trimler}}
 {{trans-bottom}}
 
@@ -132,6 +134,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Japanese: {{t|ja|懸ける|tr=[[かける]], kakeru|sc=Jpan}}
 * Portuguese: {{t+|pt|arriscar}}
 * Spanish: {{t+|es|apostar}}
+* Thai: {{t+|th|พนัน}}
 * Walloon: {{t+|wa|risker}}
 {{trans-bottom}}
 
