is plural! <my fellow Americans#48089157>

--- a/en/m/my fellow Americans.803559.wikitext
+++ b/en/m/my fellow Americans.803559.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Noun===
-{{head|en|noun|head=[[my]] [[fellow]] [[American]]s}}
+{{en-plural noun|head=[[my]] [[fellow]] [[American]]s}}
 
 # {{lb|en|US}} {{non-gloss definition|Used to establish [[credibility]] and [[connection]] with an [[audience]] of Americans, used mostly in speeches by US politicians}}.
