/* Faroese */ added pronunciation <mega#48095398>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -106,6 +106,12 @@ From {{af|eo|meg|-a}}.
 ===Etymology===
 From {{inh|fo|non|mega}}, from {{inh|fo|gem-pro|*maganą}}, from {{der|fo|ine-pro|*magʰ-}}, {{m|ine-pro|*megʰ-}}.
 
+===Pronunciation===
+* {{IPA|/ˈmeːa/|lang=fo}}
+*: {{rhymes|eːa|lang=fo}}
+* {{IPA|/ˈmiːja/|lang=fo}}
+*: {{rhymes|iːja|lang=fo}}
+
 ===Verb===
 {{head|fo|verb}}
 
@@ -113,6 +119,9 @@ From {{inh|fo|non|mega}}, from {{inh|fo|gem-pro|*maganą}}, from {{der|fo|ine-pr
 
 ====Conjugation====
 {{fo-conj-mega}}
+
+===References===
+* {{fo-lit-FO|[http://www.obg.fo/fob/fob.php?leitord&#61;mega&action&#61;1 “mega”]}}
 
 ----
 
