--- a/en/m/mesoscale.742460.wikitext
+++ b/en/m/mesoscale.742460.wikitext
@@ -6,8 +6,8 @@
 ===Adjective===
 {{en-adj|-}}
 
-# of [[medium]] size or extent; between [[microscale]] and [[macroscale]]
-# {{lb|en|meteorology|of a weather phenomenon}} roughly 2-200 kilometers in extent; between [[microscale]] and [[synoptic]]
+# Of [[medium]] size or extent; between [[microscale]] and [[macroscale]].
+# {{lb|en|meteorology|of a weather phenomenon}} Roughly 2-200 kilometers in extent; between [[microscale]] and [[synoptic]].
 
 ====Derived terms====
 * {{l|en|mesoscale convective system}}
@@ -15,4 +15,4 @@
 ===Noun===
 {{en-noun}}
 
-# A [[scale]] of intermediate size
+# A [[scale]] of intermediate size.
