--- a/en/b/befallen.6783.wikitext
+++ b/en/b/befallen.6783.wikitext
@@ -45,6 +45,7 @@ From {{affix|de|be-|fallen}}.
 {{head|sv|verb form}}
 
 # {{lb|sv|nonstandard}} {{sv-verb-form-past|befalla}}
+#:{{syn|sv|befalld}} {{q|standard}}
 
 ====Declension====
 {{sv-adj-pastpart|en-stem=befall}}
