--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -11,7 +11,7 @@
 {{head|en|verb form}}
 
 # {{en-simple past of|begin}}
-# {{lb|en|obsolete}} {{en-past of|begin}}
+# {{lb|en|obsolete}} {{en-past participle of|begin}}
 
 ====Derived terms====
 * {{l|en|beganst}}
