--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -58,11 +58,11 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 # {{lb|en|uncountable}} A simple [[dice]] [[game]] in which players roll the dice as many times as they like, either accumulating a greater score or losing previous points gained.
 
 =====Synonyms=====
-* {{sense|mammal of genus Sus}} {{l|en|hog}}, {{l|en|swine}}, see also [[Wikisaurus:pig]]
-* {{sense|someone who overeats or eats rapidly}} see [[Wikisaurus:glutton]]
-* {{sense|nasty or disgusting person}} see [[Wikisaurus:jerk]]
-* {{sense|police officer}} see [[Wikisaurus:police officer]]
-* {{sense|fat person}} see [[Wikisaurus:fat person]]
+* {{sense|mammal of genus Sus}} {{l|en|hog}}, {{l|en|swine}}, see also [[Thesaurus:pig]]
+* {{sense|someone who overeats or eats rapidly}} see [[Thesaurus:glutton]]
+* {{sense|nasty or disgusting person}} see [[Thesaurus:jerk]]
+* {{sense|police officer}} see [[Thesaurus:police officer]]
+* {{sense|fat person}} see [[Thesaurus:fat person]]
 
 =====Hyponyms=====
 * {{sense|mammal of genus Sus}} {{l|en|boar}}, {{l|en|herd boar}}; [[sow]], [[brood sow]]; [[piglet]], [[piggy]]
