/* Northern Sami */ <dame#48106890>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -174,7 +174,7 @@ From {{inh|fr|fro|dame}}, from {{inh|fr|LL.|domna}}, shortened variant of {{inh|
 ==Northern Sami==
 
 ===Pronunciation===
-{{rfp|se}}
+* {{se-IPA|damẹ}}
 
 ===Noun===
 {{head|se|noun form}}
