t+udm:[[ку]] ([[WT:EDIT|Assisted]]) <leather#48109610>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -112,6 +112,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 * Thai: {{t+|th|หนัง}}
 * Turkish: {{t+|tr|deri}}
 * Turkmen: {{t|tk|deri}}, {{t|tk|gön}}, {{t|tk|gaýyş}}
+* Udmurt: {{t|udm|ку}}
 * Ukrainian: {{t|uk|шкі́ра|f|sc=Cyrl}}
 * Urdu: {{t|ur|چمڑا|f|tr=camṛā|sc=ur-Arab}}
 * Uyghur: {{t|ug|تېرە|sc=ug-Arab}}
