t+eo:[[fajfado]] ([[WT:EDIT|Assisted]]) <whistle#48114005>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -115,6 +115,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Catalan: {{t|ca|xiulo|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t+|cmn|口笛|tr=kǒudí|sc=Hani}}
+* Esperanto: {{t|eo|fajfado}}
 * French: {{t+|fr|sifflet|m}}
 * Georgian: {{t|ka|სტვენა}}, {{t|ka|დასტვენა}}, {{t|ka|ჩასტვენა}}
 * German: {{t+|de|Pfeifen|n}}
