/* Synonyms */Wikisaurus to Thesaurus using [[Project:AWB|AWB]] <bind#48115380>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -216,7 +216,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 #: ''the Maróczy '''Bind'''''
 
 ====Synonyms====
-* See also [[Wikisaurus:difficult situation]]
+* See also [[Thesaurus:difficult situation]]
 
 ===References===
 * {{R:OneLook}}
