--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -118,7 +118,7 @@ From {{m|en|bend}}.
 #*: the full '''bent''' and stress of the soul
 
 =====Synonyms=====
-* {{sense|an inclination or talent}} {{l|en|disposition}}, {{l|en|predilection}}, {{l|en|proclivity}}, {{l|en|propensity}}, see also [[Wikisaurus:predilection]]
+* {{sense|an inclination or talent}} {{l|en|disposition}}, {{l|en|predilection}}, {{l|en|proclivity}}, {{l|en|propensity}}, see also [[Thesaurus:predilection]]
 
 =====Translations=====
 {{trans-top|inclination or talent}}
