--- a/en/m/macrophallic.801849.wikitext
+++ b/en/m/macrophallic.801849.wikitext
@@ -14,7 +14,7 @@ From {{prefix|macro|phallic|lang=en}}.
 #*: A cure was found only after those men begged Priapus to return, named him god of gardens and herds, and made '''macrophallic''' statues of him, which they placed in their yards.
 
 ====Synonyms====
-* [[Wikisaurus:macrophallic]]
+* [[Thesaurus:macrophallic]]
 
 ====References====
 * [http://books.google.com/books?id=x7rY8uGk1OYC&pg=PA590&dq=%22macrophallic%22&hl=en&ei=LJ0aTqyqJIrn0QHLgq2YBQ&sa=X&oi=book_result&ct=result&resnum=3&ved=0CDYQ6AEwAg#v=onepage&q=%22macrophallic%22&f=false 1906 reference]
