t+sw:[[pembenne]] t-balance ([[WT:EDIT|Assisted]]) <quadrilateral#48131286>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -40,8 +40,8 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Hindi: {{t+|hi|चतुर्भुज}}
 * Hungarian: {{t+|hu|négyszög}}
 * Icelandic: {{t|is|ferhliðungur|m}}, {{t|is|fjórhliðungur|m}}
-{{trans-mid}}
 * Italian: {{t+|it|quadrilatero|m}}, {{t+|it|quadrangolo|m}}
+{{trans-mid}}
 * Japanese: {{t|ja|四辺形|tr=しへんけい, shihenkei|sc=Jpan}}, {{t+|ja|四角形|tr=しかっけい, shikakkei|sc=Jpan}}
 * Malay: {{t|ms|segi empat}}, {{t|ms|caturkona}}, {{t|ms|tetragon}}
 * Maori: {{t|mi|tapawhā}}
@@ -54,6 +54,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Romanian: {{t+|ro|patrulater}}, {{t|ro|cadrilater}}
 * Russian: {{t+|ru|четырёхуго́льник|m|tr=četyrjoxugólʹnik}}
 * Spanish: {{t+|es|cuadrilátero|m}}
+* Swahili: {{t|sw|pembenne}}
 * Swedish: {{t+|sv|fyrhörning|c}}
 * Tagalog: {{t|tl|patsiha}}, {{t|tl|patgilid}}
 * Telugu: {{t+|te|చతుర్భుజి}}
