--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -26,6 +26,7 @@
 * Faroese: {{t|fo|vesturfrísiskt|n}}
 * Finnish: {{t|fi|länsifriisi}}
 * French: {{t|fr|frison occidental|m}}
+* Galician: {{t+|gl|frisón|m}}
 * German: {{t+|de|Westfriesisch|n}}
 * Italian: {{t|it|frisone occidentale|m}}
 {{trans-mid}}
