t+gl:[[frisón occidental]] ([[WT:EDIT|Assisted]]) <West Frisian#48138012>

--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -44,6 +44,7 @@
 {{trans-top|the Western Frisian dialect of Dutch}}
 * Dutch: {{t|nl|West-Fries}}
 * Finnish: {{t|fi|[[länsifriisiläinen]] [[murre]]}}
+* Galician: {{t|gl|frisón occidental}}
 * Italian: {{t|it|frisone occidentale|m}}
 * Polish: {{t|pl|zachodniofryzyjski|m}}
 {{trans-mid}}
