--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -317,16 +317,12 @@ From {{der|az|trk-pro|*at|t=horse}}.
 
 ===Verb===
 {{nl-verb-form}}
- . . .
- . . . . 
-# {{nl-verb form .. . . . . . . . . . . 
-of|n=sg|t=past|m=ind|eten}}
- . # {{nl-verb form of|m=imp|atten}}.. . . . . . . . . . . . . . . . .
- . . !
 
+# {{nl-verb form of|n=sg|t=past|m=ind|eten}}
+# {{nl-verb form of|p=123|n=sg|t=pres|m=ind|atten}}
+# {{nl-verb form of|m=imp|atten}}
 
----- . . . . . . . . . 
- .
+----
 
 ==Faroese==
 
