Added other terms <bound#48149500>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -46,19 +46,22 @@ See [[bind]]
 =====Antonyms=====
 * {{sense|logic: constrained by a quantifier}} {{l|en|free}}
 
-=====Derived terms=====
-{{der4|lang=en|{{l|en|dynamic-bound}}
-|{{l|en|fogbound}}
-|{{l|en|late-bound}}
-|{{l|en|railbound}}
-|{{l|en|snowbound}}
-|{{l|en|soulbound}}
-|{{l|en|strikebound}}
-|{{l|en|weatherbound}}
-|{{l|en|weather-bound}}
-|{{l|en|wheelchair-bound}}
-|{{l|en|wheelchairbound}}
-}}
+=====Hyponyms=====
+{{hyp4
+|dynamic-bound
+|fogbound
+|inbound
+|late-bound
+|outbound
+|railbound
+|snowbound
+|soulbound
+|strikebound
+|weatherbound
+|weather-bound
+|wheelchair-bound
+|wheelchairbound
+|lang=en}}
 
 =====Related terms=====
 * {{l|en|bound to}}
