--- a/en/r/Roemenië.4076.wikitext
+++ b/en/r/Roemenië.4076.wikitext
@@ -1,13 +1,26 @@
 ==Dutch==
+{{wikipedia|lang=nl}}
+
+===Etymology===
+{{PIE root|nl|(s)tewp}}
+{{rfe|nl}}
 
 ===Pronunciation===
-* {{IPA|/ruˈmeː.ni.jə/|lang=nl}}
+* {{a|BE}} {{IPA|/ruˈmeː.ni.jə/|lang=nl}}
+* {{a|NL}} {{IPA|/ruˈmeː.ni.jə/ | [ruˈmeɪ̯.ni.jə]|lang=nl}}
 * {{a|NL}} {{audio|Nl-Roemenië.ogg|audio|lang=nl}}
+* {{hyphenation|Roe|me|nië|lang=nl}}
 
 ===Proper noun===
 {{nl-proper noun|n}}
 
 # [[Romania]]
+
+====Related terms====
+* {{l|nl|Boekarest}}
+* {{l|nl|Roemeen}}
+* {{l|nl|Roemeens}}
+* {{l|nl|Roemeense}}
 
 [[Category:nl:Countries in Europe]]
 [[Category:nl:Exonyms]]
