t+fr:[[se gripper (''of a motor or other machine'')]] ([[WT:EDIT|Assisted]]) <seize#48154860>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -128,6 +128,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 {{trans-bottom}}
 
 {{trans-top|to bind or lock in position}}
+* French: {{t|fr|se gripper (''of a motor or other machine'')}}
 * Maori: {{t|mi|parerori}} {{qualifier|as with muscles during a cramp}}
 {{trans-mid}}
 {{trans-bottom}}
