--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -19,7 +19,7 @@
 * Danish: {{t-needed|da}}
 * Finnish: {{t+|fi|moni}}
 {{trans-mid}}
-* Portuguese: {{t-needed|pt}}
+* Portuguese: {{t|pt|um número de}}, {{t|pt|uma quantidade de}}, {{t|pt|um tanto de}}
 * Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
 * Spanish: {{t-needed|es}}
 * Ukrainian: {{t-needed|uk}}
@@ -31,7 +31,7 @@
 * Danish: {{t-needed|da}}
 * Finnish: {{t+|fi|moni}}
 {{trans-mid}}
-* Portuguese: {{t-needed|pt}}
+* Portuguese: {{t|pt|um tanto de}}
 * Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
 * Spanish: {{t-needed|es}}
 * Ukrainian: {{t-needed|uk}}
