--- a/en/m/mooses.720092.wikitext
+++ b/en/m/mooses.720092.wikitext
@@ -6,7 +6,7 @@
 
 # {{lb|en|dated|rare}} {{plural of|moose|lang=en}}
 #* '''1876,''' Familiar Letters of John Adams and His Wife Abigail Adams: With a Memoir of ... - Page 272, ''by John Adams, Abigail Adams, Charles Francis Adams''
-#*: ... Narraganset pacing mares, '''meese”, wood-ducks, flying squirrels, red-winged blackbirds, cranberries, and rattlesnakes have all been thought of.
+#*: ... Narraganset pacing mares, '''mooses''', wood-ducks, flying squirrels, red-winged blackbirds, cranberries, and rattlesnakes have all been thought of.
 
 ====Usage notes====
 * ''For a discussion of the plural forms of ''[[moose]]'', see the [[moose#Usage notes|usage note at the entry for “moose”]].''
@@ -21,4 +21,4 @@
 ===Noun===
 {{head|sco|noun plural form}}
 
-# {{plural of|moose is meese|lang=sco}}
+# {{plural of|moose|lang=sco}}
