--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -159,6 +159,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 {{trans-bottom}}
 
 {{trans-top|to be inclined; to direct itself}}
+* Esperanto: {{t|eo|alkliniĝi}}
 * Finnish: {{t+|fi|taipua}}, {{t+|fi|suuntautua}}
 {{trans-mid}}
 {{trans-bottom}}
