--- a/en/g/go public.742281.wikitext
+++ b/en/g/go public.742281.wikitext
@@ -6,3 +6,20 @@
 # {{lb|en|idiomatic|intransitive}} To make something [[public]]; to announce [[publicly]] or to the [[press]].
 #: ''They threatened to '''go public''' with the photos unless I paid up.''
 # {{lb|en|idiomatic|intransitive}} To launch an [[initial public offering]].
+
+====Translations====
+{{trans-top|make something public}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
+{{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* Portuguese: {{t-needed|pt}}
+{{trans-bottom}}
+
+{{trans-top|launch an initial public offering}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
+{{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* Portuguese: {{t-needed|pt}}
+{{trans-bottom}}
