--- a/en/g/go public.742281.wikitext
+++ b/en/g/go public.742281.wikitext
@@ -5,7 +5,7 @@
 
 # {{lb|en|idiomatic|intransitive}} To make something [[public]]; to announce [[publicly]] or to the [[press]].
 #: ''They threatened to '''go public''' with the photos unless I paid up.''
-# {{lb|en|idiomatic|intransitive}} To launch an [[initial public offering]].
+# {{lb|en|idiomatic|intransitive|business|finance}} To launch an [[initial public offering]].
 
 ====Translations====
 {{trans-top|make something public}}
