--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -199,7 +199,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 {{trans-top|a field of study in mathematics}}
 * Catalan: {{t+|ca|teoria|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|理論|sc=Hani}}, {{t+|cmn|理论|tr=lǐlùn|sc=Hani}}, {{t+|cmn|學説|sc=Hani}}, {{t+|cmn|学说|tr=xuéshuō|sc=Hani}}
+*: Mandarin: {{t+|cmn|理論|sc=Hani}}, {{t+|cmn|理论|tr=lǐlùn|sc=Hani}}, {{t+|cmn|學說|sc=Hani}}, {{t+|cmn|学说|tr=xuéshuō|sc=Hani}}
 * Czech: {{t+|cs|teorie|f}}
 * Dutch: {{t+|nl|theorie}}
 * Finnish: {{t+|fi|teoria}}
