t+ka:[[თეორია]] t+uk:[[теорія]] t+be:[[тэорыя]] t+bg:[[теория]] t-balance t+sk:[[teória]] t+sl:[[teorija]] t+ro:[[teorie]] t+sq:[[teori]] t+lv:[[teorija]] t+lt:[[teorija]] t+et:[[teooria]] t+ko:[[학설]] ([[WT:EDIT|Assis... <theory#48167887>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -111,17 +111,21 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 
 ====Translations====
 {{trans-top|a coherent set of statements attempting to explain observed phenomena}}
+* Albanian: {{t+|sq|teori|f}}
 * Arabic: {{t+|ar|نَظَرِيَّة|f}}
 * Armenian: {{t+|hy|տեսություն}}
+* Belarusian: {{t|be|тэо́рыя|f}}
+* Bulgarian: {{t+|bg|тео́рия|f}}
 * Catalan: {{t+|ca|teoria|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|理論|sc=Hani}}, {{t+|cmn|理论|tr=lǐlùn|sc=Hani}}, {{t+|cmn|學說|sc=Hani}}, {{t+|cmn|学说|tr=xuéshuō|sc=Hani}}
 * Czech: {{t+|cs|teorie|f}}
 * Dutch: {{t+|nl|theorie}}
 * Esperanto: {{t-needed|eo}}
+* Estonian: {{t+|et|teooria}}
 * Finnish: {{t+|fi|teoria}}
 * French: {{t+|fr|théorie|f}}
-* Georgian: {{t-needed|ka}}
+* Georgian: {{t|ka|თეორია}}
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
 * Haitian Creole: {{t|ht|teori}}
@@ -135,7 +139,9 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Japanese: {{t+|ja|理論|tr=りろん, riron}}, {{t+|ja|学説|tr=がくせつ, gakusetsu}}
 * Khmer: {{t+|km|ទ្រឹស្ដី|tr=trɨhsdəy|sc=Khmr}}
 {{trans-mid}}
-* Korean: {{t+|ko|이론}}
+* Korean: {{t+|ko|이론}}, {{t+|ko|학설}}
+* Latvian: {{t|lv|teorija|f}}
+* Lithuanian: {{t|lt|teorija|f}}
 * Macedonian: {{t|mk|теорија|f}}
 * Malay: {{t|ms|teori}}
 * Maltese: {{t|mt|teorija}}
@@ -145,16 +151,19 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Persian: {{t+|fa|نظریه|tr=nazariye|sc=fa-Arab}}, {{t+|fa|تئوری|tr=teori|sc=fa-Arab}}
 * Polish: {{t+|pl|teoria|f}}
 * Portuguese: {{t+|pt|teoria|f}}
-* Romanian: {{t|ro|teorii|p}}
+* Romanian: {{t|ro|teorii|p}}, {{t+|ro|teorie|f}}
 * Russian: {{t+|ru|тео́рия|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|тѐо̄рија|f|sc=Cyrl}}
 *: Roman: {{t+|sh|tèōrija|f}}
+* Slovak: {{t|sk|teória|f}}
+* Slovene: {{t+|sl|teorija|f}}
 * Spanish: {{t+|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
 * Tagalog: {{t|tl|huna}}
 * Thai: {{t-needed|th}}
 * Turkish: {{t+|tr|kuram}}, {{t+|tr|nazariye}} {{qualifier|obsolecent}}, {{t+|tr|teori}}
+* Ukrainian: {{t|uk|тео́рія|f}}
 * Vietnamese: {{t+|vi|lý thuyết}}
 * Volapük: {{t+|vo|teorod}}
 * Yiddish: {{t|yi|טעאָריע|f}}
