t+ur:[[نظریہ]] ([[WT:EDIT|Assisted]]) <theory#48173992>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -176,6 +176,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Turkish: {{t+|tr|kuram}}, {{t+|tr|nazariye}} {{qualifier|obsolecent}}, {{t+|tr|teori}}
 * Turkmen: {{t|tk|teoriýa}}
 * Ukrainian: {{t|uk|тео́рія|f}}
+* Urdu: {{t|ur|نظریہ|f|tr=nazariya}}
 * Uyghur: {{t|ug|نەزەرىيە}}
 * Uzbek: {{t+|uz|nazariya}}, {{t+|uz|teoriya}}
 * Vietnamese: {{t+|vi|lý thuyết}}, {{t+|vi|lý luận}}, {{t+|vi|học thuyết}}
