--- a/en/g/go public.742281.wikitext
+++ b/en/g/go public.742281.wikitext
@@ -12,7 +12,7 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|julkistaa}}
 * Portuguese: {{t-needed|pt}}
 {{trans-bottom}}
 
@@ -20,6 +20,6 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|[[mennä]] [[pörssiin]]}}
 * Portuguese: {{t-needed|pt}}
 {{trans-bottom}}
