t+wa:[[coshet]] ([[WT:EDIT|Assisted]]) <pig#48181999>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -339,7 +339,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Volapük: {{qualifier|♂♀}} {{t+|vo|svin}}, {{qualifier|♂}} {{t+|vo|hisvin}}, {{qualifier|♀}} {{t+|vo|jisvin}}, {{qualifier|obsolete, ♂}} {{t|vo|omsvin}}, {{t|vo|domasvin}} {{qualifier|domestic}}
 * Voro: {{t|vor|tsiga}}
 * Votic: {{t|vot|sika}}
-* Walloon: {{t+|wa|pourcea}}
+* Walloon: {{t+|wa|pourcea}}, {{t+|wa|coshet|m}}
 * Welsh: {{t+|cy|mochyn|m}}
 * West Coast Bajau: {{t|bdr|menungal}}, {{t|bdr|ogok}}, {{t|bdr|bakas}}
 * West Frisian: {{t|fy|baarch|c}}
