--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -17,7 +17,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 ====Noun====
 {{en-noun}}
 
-# Any of several [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''[[Sus scrofa]]''.
+# Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''[[Sus scrofa]]''.
 #: ''The man kept a pen with two '''pigs''' that he fed from carrots to cabbage.''
 # {{lb|en|specifically}} A young swine, a [[piglet]] {{qualifier|contrasted with a [[hog]], an adult swine}}.
 #* '''2005''' April, ''Live Swine from Canada, Investigation No. 731-TA-1076 (Final), publication 3766, April 2005, U.S. International Trade Commission'' {{ISBN|1457819899}}, page I-9:
