--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -15,7 +15,7 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 #* P. Colquhoun
 #*: Good legislation is the art of conducting a nation to the '''maximum''' of happiness, and the minimum of misery.
 # {{lb|en|mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, especially the [[global maximum]] or a [[local maximum]] of a [[function]].
-# {{lb|en|analysis}} An [[upper bound]] of a set which is also an element of that set.
+# {{lb|en|analysis}} An [[upper]] [[bound]] of a set which is also an element of that set.
 # {{lb|en|statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]].
 # {{lb|en|colloquial|snooker}} A 147 break; the highest possible break.
 # {{lb|en|colloquial|darts}} A [[score]] of [[180]] with three darts.
