--- a/en/u/undiagnosed.745824.wikitext
+++ b/en/u/undiagnosed.745824.wikitext
@@ -12,4 +12,7 @@
 {{trans-top|not diagnosed}}
 * Greek: {{t|el|αδιάγνωστος}}
 {{trans-mid}}
+* Norwegian:
+*: Bokmål: {{t|nb|udiagnostisert}}
+*: Nynorsk: {{t|nn|udiagnostisert}}
 {{trans-bottom}}
