--- a/en/e/embay.802830.wikitext
+++ b/en/e/embay.802830.wikitext
@@ -9,7 +9,7 @@ From {{prefix|en|alt1=em|bay|gloss2=bathe|lang=en}}.
 # {{lb|en|transitive|obsolete}} To [[bathe]]; to [[steep]].
 #* '''1590''', {{w|Edmund Spenser}}, ''{{w|The Faerie Queen}}'', III.11:
 #*: Sweete Love, that doth his golden wings '''embay''' / In blessed Nectar and pure Pleasures well{{nb...}}.
-#* '''1600''', {{w|Edward Fairfax}}, The ''{{w|Jerusalem Delivered}}'' of {{w|Torquato Tasso|Tasso}}, XII, lxii:
+#* '''1600''', {{w|Edward Fairfax}}, ''{{w|Jerusalem Delivered}}'' of {{w|Torquato Tasso|Tasso}}, XII, lxii:
 #*: Their swords both points and edges sharp '''embay''' / In purple blood whereso they hit or light.
 
 ===Etymology 2===
