--- a/en/g/guilloche.855171.wikitext
+++ b/en/g/guilloche.855171.wikitext
@@ -16,3 +16,8 @@ From {{etyl|fr|en}} {{m|fr|guilloche}}.
 #* '''2006''', Thomas Pynchon, ''Against the Day'', Vintage 2007, p. 1015:
 #*: A railroad right-of-way, straight across the Balkan Peninsula, conceded in Cyrillic and Arabic script all woven in and out of the loveliest green '''guilloche''' by the no-longer-quite-unabsorbed entity of East Roumelia.
 # The [[tool]] used to create such work.
+
+===Verb===
+{{en-verb|guilloch}}
+
+# {{lb|en|transitive}} To [[decorate]] with intersecting curved lines.
