--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -23,6 +23,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 
 ====Translations====
 {{trans-top|polygon having four sides}}
+* Armenian: {{t+|hy|քառանիստ}}
 * Bengali: {{t|bn|চতুর্ভুজ}}
 * Catalan: {{t|ca|quadrilàter|m}}
 * Chinese:
@@ -70,6 +71,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 ====Translations====
 {{trans-top|having four sides}}
 * Arabic: {{t|ar|رُبَاعِيّ الْجَوَانِب}}
+* Armenian: {{t+|hy|քառակողմ}}
 * Catalan: {{t|ca|quadrilàter}}
 * Danish: {{t|da|firkantet}}
 * Dutch: {{t|nl|vierhoekig}}, {{t|nl|quadrilateraal}}
