--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -11,9 +11,9 @@ Borrowed from {{bor|en|frm|-}}, from {{der|en|fro|multiplicacion}}, from {{der|e
 ===Noun===
 {{en-noun|~}}
 
-# {{lb|en|uncountable|mathematics}} The process of computing the sum of a number with itself a specified number of times, or any other [[analogous]] [[binary operation]] that combines other mathematical objects.<!--
+# {{lb|en|uncountable|arithmetic}} The process of computing the sum of a number with itself a specified number of times, or any other [[analogous]] [[binary operation]] that combines other mathematical objects.<!--
 When applied to whole numbers, multiplication can be considered as repeated addition. The multiplication ''x &times; y'' is the same as ''x + x + ... + x'', where the ''x'' appears ''y'' times in the addition, or ''y + y + ... + y'', where the ''y'' appears ''x'' times in the addition.-->
-# {{lb|en|countable}} A calculation involving multiplication.
+# {{lb|en|countable|arithmetic}} A calculation involving multiplication.
 
 ====Derived terms====
 {{der-top}}
