t+fi:[[kertolasku]] ([[WT:EDIT|Assisted]]) <multiplication#48208931>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -85,7 +85,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 *: Mandarin: {{t+|cmn|乘法|tr=chéngfǎ}}
 * Dutch: {{t+|nl|vermenigvuldiging|f}}
 * Esperanto: {{t|eo|multipliko}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|kertolasku}}
 * French: {{t+|fr|multiplication|f}}
 * Georgian: {{t|ka|გამრავლება}}
 * Greek: {{t+|el|πολλαπλασιασμός|m}}
