--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -1,6 +1,5 @@
 ==English==
 [[Image:Marbled polecat.jpg|thumb|right|A [[marbled polecat|marbled '''polecat''']] (weasel-like animal).]]
-{{wikipedia}}
 
 ===Etymology===
 From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its fondness for poultry.
@@ -11,8 +10,8 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its
 ===Noun===
 {{en-noun}}
 
-# A [[weasel]]-like animal of the genus ''[[Mustela]]''.
-## notably, the [[European polecat]], ''[[Mustela putorius]]''.
+# A [[weasel]]-like animal of the genus {{m|mul|Mustela}}.
+## notably, the [[European polecat]], {{m|mul|Mustela putorius}}.
 #* '''1919,''' {{w|Ronald Firbank}}, ''{{w|Valmouth}}'', Duckworth, hardback edition, page 61
 #*: By the little garden pergola open to the winds some fluttered peacocks were blotted nervelessly amid the dripping trees, their heads sunk back beneath their wings: while in the pergola itself, like a fallen storm-cloud, lolled a negress, her levelled, '''polecat''' eyes semi-veiled by the nebulous alchemy of the rainbow.
 # {{lb|en|US|dialect}} A [[skunk]].
@@ -102,6 +101,9 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its
 
 ===Anagrams===
 * {{anagrams|en|colpate|pot lace}}
+
+===Further reading===
+* {{pedia}}
 
 [[Category:en:Mephitids]]
 [[Category:en:Mustelids]]
