--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -14,6 +14,9 @@ Borrowed from {{bor|en|frm|-}}, from {{der|en|fro|multiplicacion}}, from {{der|e
 # {{lb|en|uncountable|arithmetic}} The process of computing the sum of a number with itself a specified number of times, or any other [[analogous]] [[binary operation]] that combines other mathematical objects.<!--
 When applied to whole numbers, multiplication can be considered as repeated addition. The multiplication ''x &times; y'' is the same as ''x + x + ... + x'', where the ''x'' appears ''y'' times in the addition, or ''y + y + ... + y'', where the ''y'' appears ''x'' times in the addition.-->
 # {{lb|en|countable|arithmetic}} A calculation involving multiplication.
+# The process of multiplying or increasing in number; [[increase]].
+#* '''1843''', ''Journal of the Statistical Society of London'' (volume 6, page 191)
+#*: If the lesser nobility have remained more numerous, it must be attributed partly to the gradual '''multiplication''' of letters of nobility, and partly to the state of indigence in which in some provinces vast numbers of the gentry lived, and which left them strangers to those habits of caution by which opulent families are governed.
 
 ====Derived terms====
 {{der-top}}
