--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -72,6 +72,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * {{l|en|bind over}} - to put under bonds to do something, as to appear at court, to keep the peace, etc.
 * {{l|en|bind to}} - to contract; as, to bind oneself to a wife.
 * {{l|en|bind up in}} - to cause to be wholly engrossed with; to absorb in.
+* {{l|en|inbind}}
 * {{l|en|unbind}}
 
 ====Translations====
