--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -23,7 +23,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 |chapter=4|title=[http://openlibrary.org/works/OL16814587W Pulling the Strings]
 |passage=The case was that of a murder. It had an element of mystery about it, however, which was puzzling the authorities. A turban and loincloth soaked in blood had been found; also a '''staff'''.}}
 # {{lb|en|music|plural [[staves]]}} A [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
-# {{lb|en|plural staff}} The [[employee]]s of a [[business]].
+# {{lb|en|plural staff or staffs}} The [[employee]]s of a [[business]].
 #* {{quote-journal|date=December 16, 2011|author=Denis Campbell|work=Guardian
 |title=[http://www.guardian.co.uk/society/2011/dec/16/hospital-staff-dementia-patients Hospital staff 'lack skills to cope with dementia patients']
 |passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and suffer from boredom, the first National Audit of Dementia found. It says hospitals should introduce "dementia champions".}}
