--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -112,7 +112,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Chinese: 
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|lisääntyminen}}
 * Portuguese: {{t-needed|pt}}
 {{trans-bottom}}
 
