--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -240,6 +240,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Bulgarian: {{t+|bg|сви́ркам|impf|sc=Cyrl}}
 * Catalan: {{t+|ca|xiular}}
 * Chinese:
+*: Cantonese: {{t|yue|吹口哨|tr=ceoi1 hau2 saau3}}
 *: Mandarin: {{t+|cmn|吹口哨|tr=chuī kǒushào|sc=Hani}}, {{t+|cmn|鳴笛|sc=Hani}}, {{t+|cmn|鸣笛|tr=míngdí|sc=Hani}}
 * Chuukese: {{t|chk|ouwa}}
 * Crimean Tatar: {{t|crh|sızğırmaq}}
