t+yai:[[харгуш]] ([[WT:EDIT|Assisted]]) <rabbit#48231555>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -223,6 +223,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Welsh: {{t+|cy|cwningen|f}}
 * West Frisian: {{t|fy|knyn|c|n}}
 * Wolof: {{t|wo|njomboor|alt=njomboor ji}}
+* Yagnobi: {{t|yai|харгуш}}
 * Yiddish: {{t|yi|האָז|m}}, {{t|yi|קיניגל|n}}, {{t|yi|קראָליק|m}}
 * Zazaki: {{t|zza|arwéş}}
 * Zhuang: {{t|za|doq}}
