t+yai:[[чиз]] ([[WT:EDIT|Assisted]]) <thing#48233954>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -210,6 +210,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Welsh: {{t+|cy|peth|m}}
 * West Frisian: {{t|fy|ding|n}}
 * Wolof: {{t|wo|këf}}
+* Yagnobi: {{t|yai|чиз}}
 * Yiddish: {{t|yi|זאַך|f}}
 {{trans-bottom}}
 
