--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -189,7 +189,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Slovene: {{t+|sl|spét}}, {{t|sl|ponôvno}}, {{t|sl|znôva}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|zasej}}
-* Southern Altai: {{t|alt|јаҥыдан|tr=jañídan}}, {{t|кайтадан|tr=qaytadán}}, {{t|alt|тагы|tr=tágí}}
+* Southern Altai: {{t|alt|јаҥыдан|tr=jañídan}}, {{t|alt|кайтадан|tr=qaytadán}}, {{t|alt|тагы|tr=tágí}}
 * Spanish: {{t|es|otra vez}}, {{t+|es|de nuevo}}, {{t+|es|nuevamente}}
 * Swedish: {{t+|sv|igen}}, {{t+|sv|ånyo}}, {{t+|sv|åter}}, {{t+|sv|på nytt}}, {{t+|sv|å nyo}}
 * Tagalog: {{t|tl|muli}}, {{t|tl|nanaman}}, {{t|tl|ulit}}
