--- a/en/r/reapplication.741525.wikitext
+++ b/en/r/reapplication.741525.wikitext
@@ -4,5 +4,6 @@
 {{prefix|en|re|application}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
+
 # The act of [[reapply]]ing; a second or subsequent [[application]].
