--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -172,6 +172,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Polish: {{t+|pl|królik|m}}
 * Portuguese: {{t+|pt|coelho|m}}
 * Purepecha: {{t|pua|auani}}
+* Quechua: {{t|qu|quwi}}
 * Romani: {{t|rom|shoshoy|m}}, {{t|rom|shoshni|f}}
 * Romanian: {{t+|ro|iepure}}, {{t|ro|iepure de vizuină}}
 * Romansch: {{t|rm|cunigl}}
