t+nl:[[uittellen]] ([[WT:EDIT|Assisted]]) <enumerate#48253717>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -33,7 +33,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 {{trans-bottom}}
 
 {{trans-top|to determine the amount of}}
-* Dutch: {{t+|nl|opsommen}}, {{t+|nl|enumereren}}
+* Dutch: {{t+|nl|opsommen}}, {{t+|nl|enumereren}}, {{t+|nl|uittellen}}
 * French: {{t+|fr|dénombrer}}
 * Hungarian: {{t+|hu|megszámol}}, {{t+|hu|számlál}}
 * Ido: {{t+|io|enumerar}}
