--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -85,6 +85,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 
 ====Translations====
 {{trans-top|back to a former place or state}}
+* Bashkir: {{t|ba|кире|sc=Cyrl}}
 * Dutch: {{t+|nl|weer}}, {{t+|nl|weder}}
 * German: {{t+|de|wieder}}, {{t+|de|zurück}}
 * Low German:
