t+oc:[[socar]] ([[WT:EDIT|Assisted]]) <bind#48257295>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -112,7 +112,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 *: Helgoland: {{t|frr|bin}}
 *: Mooring: {{t|frr|bine}}
 * Norwegian: {{t+|no|binde}}
-* Occitan: {{t+|oc|ligar}}, {{t|oc|bendar}}, {{t|oc|cordar}}, {{t|oc|cinglar}}
+* Occitan: {{t+|oc|ligar}}, {{t|oc|bendar}}, {{t|oc|cordar}}, {{t|oc|cinglar}}, {{t|oc|socar}}
 * Old Dutch: {{t|odt|bindan}}
 * Old English: {{t|ang|bindan}}
 * Old Frisian: {{t|ofs|binda}}
