--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -91,7 +91,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Dutch: {{t+|nl|binden}}
 * Esperanto: {{t-needed|eo}}
 * Faroese: {{t|fo|binda}}
-* French: {{t+|fr|lier}}, {{t+|fr|attacher}}
+* French: {{t+|fr|lier}}, {{t+|fr|attacher}}, {{t+|fr|nouer}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|binden}}
 *: Middle High German: {{t|gmh|binden}}
