--- a/en/b/befallen.6783.wikitext
+++ b/en/b/befallen.6783.wikitext
@@ -31,6 +31,13 @@ From {{affix|de|be-|fallen}}.
 ====Conjugation====
 {{de-conj-strong|befall|befiel|befallen|h||befäll||a|||a}}
 
+====Derived terms====
+* {{l|de|Befallen}}
+* {{l|de|Befaller}}
+* {{l|de|Befallung}}
+* {{l|de|befallend}}
+* {{l|de|befallen}} 
+
 ====Related terms====
 * {{l|de|Befall}}
 
