Reverted edits by [[Special:Contributions/78.171.5.248|78.171.5.248]]. If you think this rollback is in error, please leave a message on my talk page. <cop#48268132>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -16,8 +16,7 @@ From {{inh|en|enm|coppe}}, from {{inh|en|ang|*coppe}}, as in {{m|ang|ātorcoppe|
 # {{lb|en|obsolete}} A [[spider]].
 
 ===Etymology 2===
-{{PIE root|en|keh₂p}}$1000000000.
-
+{{PIE root|en|keh₂p}}
 Uncertain. Perhaps from {{inh|en|ang|copian||to plunder; pillage; steal}}; or possibly from {{der|en|frm|caper||to capture}}, from {{der|en|la|capiō||to seize, to grasp}}; or possibly from {{der|en|nl|kapen||to seize, to hijack}}, from {{der|en|fy|kapia||to take away}}, from {{der|en|ofs|kapia||to buy}}. Compare also {{cog|enm|copen||to buy}}, from {{cog|dum|copen}}.
 
 ====Verb====
