--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -11,8 +11,5 @@
 # {{lb|en|sport}} [[walkover]]
 # {{lb|en|scheduling}} week of (E.g. w/o Jan 7th, week of Jan 7th)
 
-====Related terms====
-* {{l|en|w/}}
-* {{l|en|w/i}}
-
+bite my shiny metal ass
 dicks
