--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -54,11 +54,12 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} {{m|fro|mar
 * Irish: {{t+|ga|cat crainn}}
 * Italian: {{t+|it|martora|f}}
 * Japanese: {{t+|ja|テン|tr=ten|sc=Jpan}}
+* Kazakh: {{t|kk|сусар}}
 * Korean: {{t+|ko|담비|tr=dam bi}}
 * Ladin: {{t|lld|meder}}
 * Latin: {{t|la|martes|f}}
-* Latvian: {{t|lv|cauna|f}}
 {{trans-mid}}
+* Latvian: {{t|lv|cauna|f}}
 * Lithuanian: {{t+|lt|kiaunė|f}}
 * Macedonian: {{t|mk|куна|f}}
 * Manx: {{t|gv|kayt billey|m}}
