--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -58,12 +58,13 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} {{m|fro|mar
 * Korean: {{t+|ko|담비|tr=dam bi}}
 * Ladin: {{t|lld|meder}}
 * Latin: {{t|la|martes|f}}
-{{trans-mid}}
 * Latvian: {{t|lv|cauna|f}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|kiaunė|f}}
 * Macedonian: {{t|mk|куна|f}}
 * Manx: {{t|gv|kayt billey|m}}
 * Mi'kmaq: {{t|mic|apistanewj|an}}
+* Mongolian: {{t+|mn|суусар}}
 * Narragansett: {{t|xnt|wappenagh}}
 * Norman: {{t|nrf|martre|f}} {{qualifier|Jersey}}
 * Norwegian: {{t|no|mår}}
