--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -207,9 +207,9 @@ From {{der|hu|en|CD}}.
 {{ja-noun|シーディー}}
 
 # [[compact disk]]
-#: {{ja-usex|それはヘビメタのCDです。|それ は ヘビメタ の シーディー です。|That is a heavy metal '''CD'''.}}
+#: {{ja-usex|それはヘビメタの'''CD'''です。|それ は ヘビメタ の '''シーディー''' です。|That is a heavy metal '''CD'''.}}
 # [[cash dispenser]]; an automatic cash machine for withdrawing.
-#: {{ja-usex|コンビニのCDからお金を引き出しました。|コンビニ の シーディー から おかね を ひきだしました。|I withdrew money from a '''CD''' at a convenient store.}}
+#: {{ja-usex|コンビニの'''CD'''からお金を引き出しました。|コンビニ の '''シーディー''' から おかね を ひきだしました。|I withdrew money from a '''CD''' at a convenient store.}}
 
 ====Synonyms====
 * {{sense|compact disk}} {{ja-r|コンパクト ディスク}}
