/* Further reading */ <muskrat#48273426>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -120,12 +120,12 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 {{trans-mid}}
 {{trans-bottom}}
 
-===Further reading===
-* {{projectlink|wikipedia}}
-* {{projectlink|wikipedia|Asian house shrew}}
-* {{specieslite|Ondatra zibethicus}}
-* {{specieslite|Suncus murinus}}
-* {{comcatlite|Ondatra zibethicus}}
+===References===
+* {{pedia}}
+* {{pedia|Asian house shrew}}
+* {{specieslite|Ondatra zibethicus|i=1}}
+* {{specieslite|Suncus murinus|i=1}}
+* {{comcatlite|Ondatra zibethicus|i=1}}
 
 ===Anagrams===
 * {{anagrams|en|Muktsar|muktars}}
